[gd_scene load_steps=5 format=2]

[ext_resource path="res://Nodes/Experimental/Placeholder/tilemap.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Game Objects/Falling_Platform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 2 )

[node name="Falling_Platform" type="StaticBody2D"]
script = ExtResource( 2 )
gravity = 50
shakiness = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 1

[node name="Player_Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detector"]
position = Vector2( 0, -14.025 )
shape = SubResource( 2 )

[node name="Timer_StartFalling" type="Timer" parent="."]

[node name="Timer_Disapear" type="Timer" parent="."]

[connection signal="body_entered" from="Player_Detector" to="." method="_on_Player_Detector_body_entered"]
[connection signal="timeout" from="Timer_StartFalling" to="." method="_on_Timer_StartFalling_timeout"]
[connection signal="timeout" from="Timer_Disapear" to="." method="_on_Timer_Disapear_timeout"]
